[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>, Per Lindgren <per.lindgren@ltu.se>"]
description = "`Cell` with volatile read / write operations"
documentation = "https://docs.rs/vcell"
keywords = ["no-std", "volatile", "cell"]
license = "MIT OR Apache-2.0"
name = "vcell"
repository = "https://github.com/japaric/vcell"
version = "0.2.0"

[dependencies]
heapless = "0.4.1"
cstr_core = "0.1.2"

[dependencies.klee]
version = "0.2.0"
git = "https://gitlab.henriktjader.com/pln/cargo-klee.git"
optional = true

[features]
const-fn = []
klee-analysis = ["klee", "klee/klee-analysis"]
