[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>, Per Lindgren <per.lindgren@ltu.se>"]
description = "`Cell` with volatile read / write operations"
documentation = "https://docs.rs/vcell"
keywords = ["no-std", "volatile", "cell"]
license = "MIT OR Apache-2.0"
name = "vcell"
repository = "https://github.com/japaric/vcell"
version = "0.1.2"

[dependencies.klee-sys]
version = "0.1.0"
git = "https://gitlab.henriktjader.com/pln/klee-sys.git"
optional = true

[features]
const-fn = []
klee-analysis = [ "klee-sys" ]
